crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_repeat_iterator_with_object.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{{ [1, 2, 3] * {} }}"
info:
  __minijinja_current_path: err_repeat_iterator_with_object.txt
  __minijinja_current_span:
    end_col: 1
    end_line: 1
    end_offset: 0
    start_col: 1
    start_line: 1
    start_offset: 0
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/inputs/err_repeat_iterator_with_object.txt
---
!!!ERROR!!!

Error {
    kind: InvalidOperation,
    detail: "sequences and iterables can only be multiplied with integers",
    name: "err_repeat_iterator_with_object.txt",
}

invalid operation: sequences and iterables can only be multiplied with integers
(in err_repeat_iterator_with_object.txt:1:1)
